force-app/main/default/objects/Declaration_Acceptance__c/Declaration_Acceptance__c.object-meta.xml
<CustomObject>
    <label>Declaration Acceptance</label>
    <nameField>
        <displayFormat>DEC-{000000}</displayFormat>
        <label>Declaration Acceptance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Declaration Acceptances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>