force-app/main/default/objects/Declaration_Acceptance__c/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the declaration was accepted by the signatory.</description>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>