force-app/main/default/objects/Declaration_Acceptance__c/fields/Accepted_From_IP__c.field-meta.xml
<CustomField>
    <fullName>Accepted_From_IP__c</fullName>
    <description>IP address of the client when accepting the declaration (captured from public form).</description>
    <label>Accepted From IP</label>
    <length>64</length>
    <type>Text</type>
</CustomField>