force-app/main/default/objects/Declaration_Acceptance__c/fields/Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Accepted_On__c</fullName>
    <description>Date and time when the declaration was accepted by the signatory.</description>
    <label>Accepted On</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>