force-app/main/default/objects/Declaration_Acceptance__c/fields/Declaration_Type__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Type__c</fullName>
    <description>Type of legal declaration or terms accepted.</description>
    <label>Declaration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accuracy_Declaration</fullName>
                <label>Accuracy Declaration</label>
            </value>
            <value>
                <fullName>AML_Consent</fullName>
                <label>AML/KYC Consent</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Risk_Disclosure</fullName>
                <label>Risk Disclosure</label>
            </value>
            <value>
                <fullName>Terms_of_Business</fullName>
                <label>Terms of Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>