force-app/main/default/objects/Declaration_Acceptance__c/fields/Declaration_Version__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Version__c</fullName>
    <description>Version identifier of the declaration text (e.g. &apos;v3.1&apos; or date-based version).</description>
    <label>Declaration Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>