force-app/main/default/objects/Declaration_Acceptance__c/fields/Onboarding_Application__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Application__c</fullName>
    <description>Parent onboarding application this declaration acceptance belongs to.</description>
    <label>Onboarding Application</label>
    <referenceTo>Onboarding_Application__c</referenceTo>
    <relationshipLabel>Declaration Acceptances</relationshipLabel>
    <relationshipName>Declaration_Acceptances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>