force-app/main/default/objects/Declaration_Acceptance__c/fields/Signatory_Party__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Party who accepted this declaration (the signatory).</description>
    <label>Signatory Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Declaration Acceptances</relationshipLabel>
    <relationshipName>Declaration_Acceptances</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>