force-app/main/default/objects/Declaration_Acceptance__c/fields/Signature_Name__c.field-meta.xml
<CustomField>
    <fullName>Signature_Name__c</fullName>
    <description>Name typed as electronic signature by the signatory.</description>
    <label>Signature Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>