force-app/main/default/objects/Declaration_Acceptance__c/fields/Signature_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Signature_Timestamp__c</fullName>
    <description>Date and time when the electronic signature was applied (may be same as Accepted On).</description>
    <label>Signature Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>